egonlang-core/res/examples/invalid/fn_expr_type_mismatch_in_body_infix_bang.eg
(a: string): bool => { !a };

// out: TypeError: mismatched types: expected type `bool` but received `string`